Update Tokyo Olympic Transformation.ipynb

--- a/Tokyo Olympic Transformation.ipynb
+++ b/Tokyo Olympic Transformation.ipynb
@@ -49,9 +49,9 @@
    "source": [
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"2e8ca8d3-0325-456e-9013-2fd9a2a42c57\",\n",
-    "\"fs.azure.account.oauth2.client.secret\": '60a8Q~dMpGYN~UKdsi.ZO5HgELxj~bC0Rdh3CaiV',\n",
-    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/f8c1aed3-dcd0-43de-b30f-592e39d6a832/oauth2/token\"}\n",
+    "\"fs.azure.account.oauth2.client.id\": \"client_id",\n",
+    "\"fs.azure.account.oauth2.client.secret\": 'secret_key',\n",
+    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/tenant_id/oauth2/token\"}\n",
     "\n",
     "\n",
     "dbutils.fs.mount(\n",
